Client general fixes
- Fixed tost notifications position in mobile
- Fixed mobile button colours
- Fixed tab notifications not being up-to-date
- Prevent mobile auto-zoom on inputs
- Scroll to active tab when out of view

--- a/client/src/components/MessageForm/MessageForm.scss
+++ b/client/src/components/MessageForm/MessageForm.scss
@@ -26,6 +26,7 @@
 
         &--disabled {
             cursor: default;
+            color: $color-grey-2;
         }
     }
 }
